--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -48,6 +48,7 @@ $max-width: 1200px;
 
 $screen-iphone: 375px;
 $screen-iphone-plus: 414px;
+$screen-tablet-small: 600px;
 $screen-tablet: 768px;
 $screen-desktop: 1024px;
 $screen-desktop-large: 1280px;
