--- a/src/styles/components/common/_button.scss
+++ b/src/styles/components/common/_button.scss
@@ -1,10 +1,11 @@
 .button {
     @include text($H300, 300, $white);
     background-color: $header-btn-color;
-    padding: 15px 25px;
+    padding: 16px 43px;
     border-radius: 5px;
     transition: all 0.2s linear;
-    width: 80%;
+    width: 90%;
+    text-align: center;
    
     @media screen and (min-width:$screen-desktop) {
         width: fit-content;
