--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,10 +14,12 @@
 @import './components/common/logo';
 @import './components/common/navigation';
 @import './components/common/link-card';
+@import './components/common/collage';
 
 
 // Components
 @import './components/header';
 @import './components/section-about';
 @import './components/section-services';
+@import './components/section-gallery';
 
