add scroll-behavior: smooth;

--- a/src/styles/components/common/_collage.scss
+++ b/src/styles/components/common/_collage.scss
@@ -1,5 +1,6 @@
 .collage {
     overflow-x: scroll;
+    scroll-behavior: smooth;
     display: flex;
     padding-top: 22px;
     padding-bottom: 32px;
