--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,7 @@
 @import './components/common/navigation';
 @import './components/common/link-card';
 @import './components/common/collage';
+@import './components/common/_blog-card';
 
 
 // Components
@@ -22,4 +23,5 @@
 @import './components/section-about';
 @import './components/section-services';
 @import './components/section-gallery';
+@import './components/section-blog';
 
