--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,4 +24,5 @@
 @import './components/section-services';
 @import './components/section-gallery';
 @import './components/section-blog';
+@import './components/section-subscribe';
 
