--- a/src/styles/components/_section-blog.scss
+++ b/src/styles/components/_section-blog.scss
@@ -2,7 +2,7 @@
     background-color: $blog-bg-color;
     &__container {
         @include flex(center ,center ,column);
-        padding: 100px 24px 120px 24px;
+        padding-top: 100px;
     }
     &__tittle {
         @include text($H900 ,600 ,$white);
@@ -18,6 +18,7 @@
     }
     &__button {
         background-color: $blog-btn-color;
+        margin-bottom: 120px;
         
     }
 }
