--- a/src/styles/components/common/_button.scss
+++ b/src/styles/components/common/_button.scss
@@ -12,6 +12,7 @@
         width: fit-content;
         &:hover {
             transform: scale(1.1);
+            cursor: pointer;
         }
     }
 }
