--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -1,4 +1,4 @@
-<section class="section-blog">
+<section class="section-blog" id="blog">
   <div class="section-blog__container container">
     <h2 class="section-blog__tittle">Blog</h2>
     <p class="section-blog__text">
