--- a/src/templates/subscribe.html
+++ b/src/templates/subscribe.html
@@ -1,12 +1,19 @@
 <section class="section-subscribe">
-<div class="container section-subscribe__container">
+  <div class="container section-subscribe__container">
     <h2 class="section-subscribe__tittle">Subscribe To Us</h2>
-    <p class="section-subscribe__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    <p class="section-subscribe__text">
+      Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+    </p>
     <form action="#" method="POST" class="section-subscribe__form">
-        <input class="section-subscribe__input" type="text">
-        <button class="section-subscribe__button button">SUBSCRIBE</button>
-
+      <input
+        class="section-subscribe__input"
+        type="email"
+        autocomplete="organization"
+        placeholder="Your email address..."
+        required
+      />
+      <button class="section-subscribe__button button">SUBSCRIBE</button>
     </form>
-    
-</div>
+  </div>
 </section>
