--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,7 +7,7 @@
           <li class="navigation__item"><a href="#about" class="navigation__link">ABOUT</a></li>
           <li class="navigation__item"><a href="#services" class="navigation__link">SERVICES</a></li>
           <li class="navigation__item"><a href="#gallery" class="navigation__link">GALLERY</a></li>
-          <li class="navigation__item"><a href="" class="navigation__link">BLOG</a></li>
+          <li class="navigation__item"><a href="#blog" class="navigation__link">BLOG</a></li>
           <li class="navigation__item"><a href="" class="navigation__link">CONTACT</a></li>
         </ul>
       </div> 
