--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@
 @import './components/section-about';
 @import './components/section-services';
 @import './components/section-gallery';
-@import './components/section-blog';
 @import './components/section-subscribe';
+@import './components/section-blog';
+@import './components/footer';
 
