--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container footer__container">
         <p class="footer__copyright">© 2015 Company. All right reserved.</p>
-        <h3 class="footer__logo logo">Cahee</h3>
+        <h3 class="footer__logo logo"> <a href="#header" class="footer__logo-link">Cahee</a></h3>
         <p class="footer__author">Made with <span class="footer__author--marked">love</span> by Auskteez</p>
     </div>
     
