--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import './components/common/link-card';
 @import './components/common/collage';
 @import './components/common/_blog-card';
+@import './components/common/botton-up';
 
 
 // Components
