--- a/src/styles/components/common/_botton-up.scss
+++ b/src/styles/components/common/_botton-up.scss
@@ -1,4 +1,7 @@
 .btn-up {
+    @media screen and (min-width: $screen-tablet-small) {
+        background: rgba(52,51,56,0.4);
+    }
     width:100px;
     border:2px solid #ccc;
     text-align:center;
@@ -13,7 +16,7 @@
     font-style: 18px;
     font-weight: 900;
     color: #fff;
-    background: rgba(52,51,56,0.4);
+    background: rgba(52,51,56,0.2);
     border: none;
     width: 70px;
     height: 70px;
@@ -22,8 +25,8 @@
     padding-top: 22px;
     text-decoration: none;
     transition: all .5s linear;
-    }
-    .btn-up:hover {
+    &:hover {
         background: rgba(52,51,56,0.7);
         transform: scale(1.2);
     }
+      }
