--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -11,6 +11,8 @@ $gallery-bg-color: #FFE92F;
 $subscribe-bg-color: white;
 $blog-bg-color: #B07CF7;
 $footer-bg-color: #262626;
+$contact-bg-color:#00C4C4;
+$input-border-color:#355B82;
 
 // Button colors
 $header-btn-color: #FF6033;
