--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,5 +26,6 @@
 @import './components/section-gallery';
 @import './components/section-subscribe';
 @import './components/section-blog';
+@import './components/section-contact';
 @import './components/footer';
 
