--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,4 +1,4 @@
-<section class="section-contact">
+<section id="contact" class="section-contact">
   <div class="section-contact__container container">
     <h2 class="section-contact__title">Contact</h2>
     <p class="section-contact__text">
