--- a/src/styles/components/_section-contact.scss
+++ b/src/styles/components/_section-contact.scss
@@ -56,11 +56,13 @@
         height: 50px;
         background-color: $contact-bg-color;
         border: none;
+        border-left: 3px solid $contact-bg-color;
         opacity: 0.5;
         padding: 15px;
         @include text ($H50 , 500 ,$white);
         outline: none;
         border-radius: 5px;
+        transition: all .3s linear;
         @media screen and (min-width: $screen-desktop) {
             min-width: 500px;
         }
@@ -74,16 +76,19 @@
      }
     &__textarea {
         margin-bottom: 15px;
-        min-width: 100%;
-        height: 250px;
+        width: 100%;
+        height: 150px;
+        border-left: 3px solid $contact-bg-color;
         background-color: $contact-bg-color;
         opacity: 0.5;
         outline: none;
-        @include text ($H50 , 500 ,$white);
+        @include text ($H300 , 500 ,$white);
         padding: 15px;
         border-radius: 5px;
+        transition: all .3s linear;
         @media screen and (min-width: $screen-desktop) {
             min-width: 500px;
+            height: 250px;
         }
 
         
