--- a/src/styles/components/common/_blog-card.scss
+++ b/src/styles/components/common/_blog-card.scss
@@ -64,7 +64,7 @@
         position: absolute;
         left: 0;
         bottom: 0;
-        padding: 0 0 25px 20px;
+        padding: 0 25px 25px 20px;
         background-image: linear-gradient(to top, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.51), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.48), rgba(0, 0, 0, 0.47), rgba(0, 0, 0, 0.39), rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.08), rgba(0, 0, 0, 0));
     }
     &__tittle {
