--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -21,7 +21,7 @@
       <!-- <object class="scroll" data="images/scroll.svg" type="image/svg+xml"></object> -->
       
       <a  class="scroll" href="#about">
-        <img src="/images/scroll.png" alt="">
+        <img src="images/scroll.png" alt="">
       </a>
       </div>
 </header>
