--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -7,25 +7,42 @@
     </p>
 
     <div class="section-contact__wrapper">
-        <div class="section-contact__form-wrapper">
-            <form id="form" action="#" class="section-contact__form" method="POST">
-                <input class="section-contact__input" type="text" minlength="5" placeholder="Your name..." required />
-                <input class="section-contact__input" type="email" placeholder="Your email..." required />
-                <input class="section-contact__input" type="tel" minlength="9" placeholder="Your phone number..." required />
-                <textarea
-                  class="section-contact__textarea"
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="10"
-                  placeholder="Your message..."
-                  required
-                ></textarea>
-              </form>
-              <button form="form" class="section-contact__button button">Send</button>
-        </div>
-      
-      
+      <div class="section-contact__form-wrapper">
+        <form id="form" action="#" class="section-contact__form" method="POST">
+          <input
+            class="section-contact__input"
+            type="text"
+            minlength="5"
+            placeholder="Your name..."
+            required
+          />
+          <input
+            class="section-contact__input"
+            type="email"
+            placeholder="Your email..."
+            required
+          />
+          <input
+            class="section-contact__input"
+            type="tel"
+            minlength="9"
+            placeholder="Your phone number..."
+            required
+          />
+          <textarea
+            class="section-contact__textarea"
+            name=""
+            id=""
+            minlength="3"
+            cols="30"
+            rows="10"
+            placeholder="Your message... (necessarily)"
+            required
+          ></textarea>
+        </form>
+        <button form="form" class="section-contact__button button">Send</button>
+      </div>
+
       <div class="section-contact__info">
         <ul class="section-contact__list">
           <li class="section-contact__list-item">
