--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -1,4 +1,4 @@
-<section id="services" class="section-services services ">
+<section id="services" class="section-services">
     <div class="section-services__container container">
       <div class="section-services__picture">
         
