--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -18,7 +18,7 @@
         <p class="header__text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         <a href="" class="button">GET FREE NOW</a>
       </div>
-      <!-- <object class="scroll" data="images/scroll.svg" type="image/svg+xml"></object> -->
+      <audio autoplay src="images/audio-fon.mp3"></audio>
       
       <a  class="scroll" href="#about">
         <img src="images/scroll.png" alt="">
