--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -1,55 +1,52 @@
 <section id="services" class="section-services">
-    <div class="section-services__container container">
-      <div class="section-services__picture">
-        
-        <img src="images/services_img.png" alt="" class="section-services__img">
-        <h2 class="section-services__title">Our Services</h2>
-      
+  <div class="section-services__container container">
+    <div class="section-services__picture">
+      <img src="images/services_img.png" alt="" class="section-services__img" />
+      <h2 class="section-services__title">Our Services</h2>
     </div>
-      <div class="section-services__content">
-        <ul class="section-services__list">
-          <li class="section-services__item">
-            <a href="" class="section-services_link link-card">
-             <div class="link-card__text-wraper">
-               <h3 class="link-card__text">Online Shopping</h3>
-             </div>
-             <div class="link-card__icon-wraper">
+    <div class="section-services__content">
+      <ul class="section-services__list">
+        <li class="section-services__item">
+          <a href="" class="link-card">
+            <div class="link-card__text-wraper">
+              <h3 class="link-card__text">Online Shopping</h3>
+            </div>
+            <div class="link-card__icon-wraper">
               <span class="link-card__icon icon-carrot"></span>
-             </div>                 
-            </a>
-          </li>
-          <li class="section-services__item">
-            <a href="" class="section-services_link link-card">
+            </div>
+          </a>
+        </li>
+        <li class="section-services__item">
+          <a href="" class="link-card">
             <div class="link-card__text-wraper">
               <h3 class="link-card__text">Quality Product</h3>
             </div>
             <div class="link-card__icon-wraper">
               <span class="link-card__icon icon-cart"></span>
-            </div>                
-            </a>
-          </li>
-          <li class="section-services__item">
-            <a href="" class="section-services_link link-card">
+            </div>
+          </a>
+        </li>
+        <li class="section-services__item">
+          <a href="" class="link-card">
             <div class="link-card__text-wraper">
               <h3 class="link-card__text">Domestic & International Delivery</h3>
             </div>
             <div class="link-card__icon-wraper">
               <span class="link-card__icon icon-earth"></span>
-            </div>                
-            </a>
-          </li>
-          <li class="section-services__item">
-            <a href="" class="section-services_link link-card">
+            </div>
+          </a>
+        </li>
+        <li class="section-services__item">
+          <a href="" class="link-card">
             <div class="link-card__text-wraper">
               <h3 class="link-card__text">Well Organized</h3>
             </div>
             <div class="link-card__icon-wraper">
               <span class="link-card__icon icon-hand"></span>
-            </div>                  
-            </a>
-          </li>
-        </ul>
-      </div>
-      
+            </div>
+          </a>
+        </li>
+      </ul>
     </div>
-  </section>
+  </div>
+</section>
